tests/NormalTests/paczka2/big_fuzzy/85101045.err
Error in line 5: df7UyANG S68 19,5
Error in line 3: zanXn A515 32,4
Error in line 13: S612 S612 96,5
Error in line 7: GcVL17 S612 58,0
Error in line 20: zanXn A515 93,5
Error in line 28: HyBD A515 11,1
Error in line 46: df7UyANG S612 29,0
Error in line 49: df7UyANG A515 27,8
Error in line 42: 51Dcc3 A515 2,8
Error in line 56: HyBD A515 76,2
Error in line 51: df7UyANG S46 33,4
Error in line 67: S612 S612 36,9
Error in line 69: HyBD A515 38,4
Error in line 84: df7UyANG S68 52,1
Error in line 88: b8lVjj S68 63,1
Error in line 97: b8lVjj S46 94,2
Error in line 99: b8lVjj A515 76,4
Error in line 94: 51Dcc3 S46 69,1
Error in line 105: df7UyANG S68 95,4
Error in line 114: 51Dcc3 S612 372,7
Error in line 118: 51Dcc3 S46 51,6
Error in line 129: S612 S68 49,2
Error in line 135: zanXn S612 46,5
Error in line 115: b8lVjj A515 30,2
Error in line 134: S612 A515 81,5
Error in line 140: 51Dcc3 S46 87,5
Error in line 146: 51Dcc3 S68 20,0
Error in line 148: GcVL17 S612 51,9
Error in line 161: df7UyANG A515 7,9
Error in line 154: 51Dcc3 S612 5,7
Error in line 117: HyBD S46 141,0
Error in line 163: df7UyANG S68 52,3
Error in line 178: b8lVjj S68 79,5
Error in line 173: HyBD S46 49,0
Error in line 174: df7UyANG S612 27,2
Error in line 181: df7UyANG S68 77,4
Error in line 196: GcVL17 S68 98,3
Error in line 192: S612 S68 5,3
Error in line 207: zanXn S68 92,1
Error in line 211: zanXn A515 56,0
Error in line 215: zanXn S612 85,3
Error in line 228: zanXn Af1f 3,0
Error in line 188: HyBD S612 2,9
